// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comprehensive E2E Tests > complex Data Flow Scenarios > should handle concurrent API calls without conflicts 1`] = `
[
  [],
  [],
  {
    "current": [],
    "metadata": {
      "currentCount": 0,
      "previousCount": 0,
    },
    "previous": [],
  },
  {
    "current": [],
    "metadata": {
      "currentCount": 0,
      "previousCount": 0,
      "totalKeywords": 0,
    },
    "previous": [],
  },
  {
    "inspection": {
      "indexStatusResult": {
        "coverageState": "Submitted and indexed",
        "googleCanonical": "https://example.com/page",
        "indexingState": "INDEXING_ALLOWED",
        "lastCrawlTime": "2024-01-15T10:30:00.000Z",
        "pageFetchState": "SUCCESSFUL",
        "robotsTxtState": "ALLOWED",
        "userCanonical": "https://example.com/page",
        "verdict": "PASS",
      },
      "inspectionResultLink": "https://search.google.com/search-console/inspect",
      "mobileUsabilityResult": {
        "verdict": "PASS",
      },
      "richResultsResult": {
        "detectedItems": [
          {
            "items": [
              "Article markup found",
            ],
            "richResultType": "Article",
          },
        ],
        "verdict": "PASS",
      },
    },
    "isIndexed": true,
  },
  {
    "inspection": {
      "indexStatusResult": {
        "coverageState": "Submitted and indexed",
        "googleCanonical": "https://example.com/page",
        "indexingState": "INDEXING_ALLOWED",
        "lastCrawlTime": "2024-01-15T10:30:00.000Z",
        "pageFetchState": "SUCCESSFUL",
        "robotsTxtState": "ALLOWED",
        "userCanonical": "https://example.com/page",
        "verdict": "PASS",
      },
      "inspectionResultLink": "https://search.google.com/search-console/inspect",
      "mobileUsabilityResult": {
        "verdict": "PASS",
      },
      "richResultsResult": {
        "detectedItems": [
          {
            "items": [
              "Article markup found",
            ],
            "richResultType": "Article",
          },
        ],
        "verdict": "PASS",
      },
    },
    "isIndexed": true,
  },
  {
    "inspection": {
      "indexStatusResult": {
        "coverageState": "Submitted and indexed",
        "googleCanonical": "https://example.com/page",
        "indexingState": "INDEXING_ALLOWED",
        "lastCrawlTime": "2024-01-15T10:30:00.000Z",
        "pageFetchState": "SUCCESSFUL",
        "robotsTxtState": "ALLOWED",
        "userCanonical": "https://example.com/page",
        "verdict": "PASS",
      },
      "inspectionResultLink": "https://search.google.com/search-console/inspect",
      "mobileUsabilityResult": {
        "verdict": "PASS",
      },
      "richResultsResult": {
        "detectedItems": [
          {
            "items": [
              "Article markup found",
            ],
            "richResultType": "Article",
          },
        ],
        "verdict": "PASS",
      },
    },
    "isIndexed": true,
  },
]
`;

exports[`comprehensive E2E Tests > complex Data Flow Scenarios > should handle multi-site analytics comparison correctly 1`] = `
[
  {
    "current": [
      {
        "clicks": 1000,
        "ctr": 0.1,
        "device": "desktop",
        "dimension": "device",
        "impressions": 10000,
        "keys": null,
        "position": 5,
      },
    ],
    "metadata": {
      "currentCount": 1,
      "previousCount": 1,
    },
    "previous": [
      {
        "clicks": 1000,
        "ctr": 0.1,
        "device": "desktop",
        "dimension": "device",
        "impressions": 10000,
        "keys": null,
        "position": 5,
      },
    ],
  },
  {
    "current": [
      {
        "clicks": 500,
        "ctr": 0.0625,
        "device": "mobile",
        "dimension": "device",
        "impressions": 8000,
        "keys": null,
        "position": 8,
      },
    ],
    "metadata": {
      "currentCount": 1,
      "previousCount": 1,
    },
    "previous": [
      {
        "clicks": 500,
        "ctr": 0.0625,
        "device": "mobile",
        "dimension": "device",
        "impressions": 8000,
        "keys": null,
        "position": 8,
      },
    ],
  },
  {
    "current": [
      {
        "clicks": 100,
        "ctr": 0.05,
        "device": "tablet",
        "dimension": "device",
        "impressions": 2000,
        "keys": null,
        "position": 12,
      },
    ],
    "metadata": {
      "currentCount": 1,
      "previousCount": 1,
    },
    "previous": [
      {
        "clicks": 100,
        "ctr": 0.05,
        "device": "tablet",
        "dimension": "device",
        "impressions": 2000,
        "keys": null,
        "position": 12,
      },
    ],
  },
]
`;

exports[`comprehensive E2E Tests > complex Data Flow Scenarios > should handle period range edge cases and boundary conditions 1`] = `
[
  {
    "hasValidDates": true,
    "input": "1d",
    "periodDays": 1,
    "prevPeriodDays": 0,
    "prevPeriodEndsBeforeCurrent": true,
    "success": true,
  },
  {
    "hasValidDates": true,
    "input": "365d",
    "periodDays": 365,
    "prevPeriodDays": 364,
    "prevPeriodEndsBeforeCurrent": true,
    "success": true,
  },
  {
    "hasValidDates": true,
    "input": "1mo",
    "periodDays": 30,
    "prevPeriodDays": 29,
    "prevPeriodEndsBeforeCurrent": true,
    "success": true,
  },
  {
    "hasValidDates": true,
    "input": "12mo",
    "periodDays": 360,
    "prevPeriodDays": 359,
    "prevPeriodEndsBeforeCurrent": true,
    "success": true,
  },
  {
    "hasValidDates": true,
    "input": "all",
    "periodDays": 36525,
    "prevPeriodDays": 36523,
    "prevPeriodEndsBeforeCurrent": true,
    "success": true,
  },
  {
    "hasValidDates": false,
    "input": {
      "end": 2024-01-01T00:00:00.000Z,
      "start": 2024-01-01T00:00:00.000Z,
    },
    "periodDays": 0,
    "prevPeriodDays": 0,
    "prevPeriodEndsBeforeCurrent": true,
    "success": true,
  },
  {
    "hasValidDates": true,
    "input": {
      "end": 2025-01-01T00:00:00.000Z,
      "start": 2024-12-31T00:00:00.000Z,
    },
    "periodDays": 1,
    "prevPeriodDays": 1,
    "prevPeriodEndsBeforeCurrent": true,
    "success": true,
  },
  {
    "hasValidDates": true,
    "input": {
      "end": 2024-03-01T00:00:00.000Z,
      "start": 2024-02-28T00:00:00.000Z,
    },
    "periodDays": 2,
    "prevPeriodDays": 2,
    "prevPeriodEndsBeforeCurrent": true,
    "success": true,
  },
  {
    "hasValidDates": true,
    "input": {
      "end": 2024-12-31T00:00:00.000Z,
      "start": 2020-01-01T00:00:00.000Z,
    },
    "periodDays": 1826,
    "prevPeriodDays": 1826,
    "prevPeriodEndsBeforeCurrent": true,
    "success": true,
  },
]
`;

exports[`comprehensive E2E Tests > data Integrity and Transformation Tests > should handle percentage calculations with edge values 1`] = `
[
  {
    "input": [
      0,
      0,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": 0,
  },
  {
    "input": [
      100,
      0,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": 0,
  },
  {
    "input": [
      0,
      100,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": 0,
  },
  {
    "input": [
      100,
      100,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": 0,
  },
  {
    "input": [
      50,
      100,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": -66.66666666666666,
  },
  {
    "input": [
      200,
      100,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": 66.66666666666666,
  },
  {
    "input": [
      0.1,
      0.2,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": -66.66666666666666,
  },
  {
    "input": [
      1000000,
      999999,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": 0.000100000050000025,
  },
  {
    "input": [
      -100,
      100,
    ],
    "isFinite": false,
    "isNaN": false,
    "result": -Infinity,
  },
  {
    "input": [
      100,
      -100,
    ],
    "isFinite": false,
    "isNaN": false,
    "result": Infinity,
  },
  {
    "input": [
      Infinity,
      100,
    ],
    "isFinite": false,
    "isNaN": true,
    "result": NaN,
  },
  {
    "input": [
      100,
      Infinity,
    ],
    "isFinite": false,
    "isNaN": true,
    "result": NaN,
  },
  {
    "input": [
      NaN,
      100,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": 0,
  },
  {
    "input": [
      100,
      NaN,
    ],
    "isFinite": true,
    "isNaN": false,
    "result": 0,
  },
]
`;

exports[`comprehensive E2E Tests > data Integrity and Transformation Tests > should maintain data consistency across different API responses 1`] = `
{
  "current": [
    {
      "clicks": 0,
      "ctr": 0,
      "device": "test-key",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 1000,
      "ctr": 0,
      "device": "test-key",
      "dimension": "device",
      "impressions": 0,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "test-key",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 0,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "test-key",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 100,
    },
    {
      "clicks": 0,
      "ctr": 0.1,
      "device": "test-key",
      "dimension": "device",
      "impressions": 0,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "unknown",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "unknown",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "unknown",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 5.5,
    },
  ],
  "metadata": {
    "currentCount": 8,
    "previousCount": 8,
  },
  "previous": [
    {
      "clicks": 0,
      "ctr": 0,
      "device": "test-key",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 1000,
      "ctr": 0,
      "device": "test-key",
      "dimension": "device",
      "impressions": 0,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "test-key",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 0,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "test-key",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 100,
    },
    {
      "clicks": 0,
      "ctr": 0.1,
      "device": "test-key",
      "dimension": "device",
      "impressions": 0,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "unknown",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "unknown",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 5.5,
    },
    {
      "clicks": 100,
      "ctr": 0.1,
      "device": "unknown",
      "dimension": "device",
      "impressions": 1000,
      "keys": null,
      "position": 5.5,
    },
  ],
}
`;

exports[`comprehensive E2E Tests > data Integrity and Transformation Tests > should validate query body generation with complex filters 1`] = `
[
  {
    "filterCount": 6,
    "name": "Multiple dimension filters",
    "queryBody": {
      "aggregationType": "byPage",
      "dataState": "all",
      "dimensionFilterGroups": [
        {
          "filters": [
            {
              "dimension": "page",
              "expression": "^https://example\\.com/.*",
              "operator": "includingRegex",
            },
            {
              "dimension": "page",
              "expression": "#",
              "operator": "excludingRegex",
            },
            {
              "dimension": "query",
              "expression": "test",
              "operator": "contains",
            },
            {
              "dimension": "page",
              "expression": "/admin",
              "operator": "notContains",
            },
            {
              "dimension": "country",
              "expression": "USA",
              "operator": "equals",
            },
            {
              "dimension": "device",
              "expression": "TABLET",
              "operator": "notEquals",
            },
          ],
        },
      ],
      "endDate": "2024-01-31",
      "rowLimit": 25000,
      "startDate": "2024-01-01",
      "type": "web",
    },
  },
  {
    "filterCount": 3,
    "name": "Regex filters",
    "queryBody": {
      "aggregationType": "byPage",
      "dataState": "all",
      "dimensionFilterGroups": [
        {
          "filters": [
            {
              "dimension": "page",
              "expression": "#",
              "operator": "excludingRegex",
            },
            {
              "dimension": "page",
              "expression": "^https://example\\.com/(blog|news)/",
              "operator": "includingRegex",
            },
            {
              "dimension": "query",
              "expression": "(spam|test|debug)",
              "operator": "excludingRegex",
            },
          ],
        },
      ],
      "endDate": "2024-01-31",
      "rowLimit": 25000,
      "startDate": "2024-01-01",
      "type": "web",
    },
  },
  {
    "filterCount": 4,
    "name": "Empty and null filters",
    "queryBody": {
      "aggregationType": "byPage",
      "dataState": "all",
      "dimensionFilterGroups": [
        {
          "filters": [
            {
              "dimension": "page",
              "expression": "#",
              "operator": "excludingRegex",
            },
            {
              "dimension": "query",
              "expression": "",
              "operator": "contains",
            },
            {
              "dimension": "page",
              "expression": null,
              "operator": "contains",
            },
            {
              "dimension": null,
              "expression": "test",
              "operator": "contains",
            },
          ],
        },
      ],
      "endDate": "2024-01-31",
      "rowLimit": 25000,
      "startDate": "2024-01-01",
      "type": "web",
    },
  },
]
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle different site URL formats correctly 1`] = `
{
  "aggregationType": "byPage",
  "dataState": "all",
  "dimensionFilterGroups": [
    {
      "filters": [
        {
          "dimension": "page",
          "expression": "^https://example\\.com/.*",
          "operator": "includingRegex",
        },
        {
          "dimension": "page",
          "expression": "#",
          "operator": "excludingRegex",
        },
      ],
    },
  ],
  "endDate": "2024-01-31",
  "rowLimit": 25000,
  "startDate": "2024-01-01",
  "type": "web",
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle different site URL formats correctly 2`] = `
{
  "aggregationType": "byPage",
  "dataState": "all",
  "dimensionFilterGroups": [
    {
      "filters": [
        {
          "dimension": "page",
          "expression": "^http://example\\.com/.*",
          "operator": "includingRegex",
        },
        {
          "dimension": "page",
          "expression": "#",
          "operator": "excludingRegex",
        },
      ],
    },
  ],
  "endDate": "2024-01-31",
  "rowLimit": 25000,
  "startDate": "2024-01-01",
  "type": "web",
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle different site URL formats correctly 3`] = `
{
  "aggregationType": "byPage",
  "dataState": "all",
  "dimensionFilterGroups": [
    {
      "filters": [
        {
          "dimension": "page",
          "expression": "^https://www\\.example\\.com/.*",
          "operator": "includingRegex",
        },
        {
          "dimension": "page",
          "expression": "#",
          "operator": "excludingRegex",
        },
      ],
    },
  ],
  "endDate": "2024-01-31",
  "rowLimit": 25000,
  "startDate": "2024-01-01",
  "type": "web",
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle different site URL formats correctly 4`] = `
{
  "aggregationType": "byPage",
  "dataState": "all",
  "dimensionFilterGroups": [
    {
      "filters": [
        {
          "dimension": "page",
          "expression": "^https://subdomain\\.example\\.com/.*",
          "operator": "includingRegex",
        },
        {
          "dimension": "page",
          "expression": "#",
          "operator": "excludingRegex",
        },
      ],
    },
  ],
  "endDate": "2024-01-31",
  "rowLimit": 25000,
  "startDate": "2024-01-01",
  "type": "web",
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle different site URL formats correctly 5`] = `
{
  "aggregationType": "byPage",
  "dataState": "all",
  "dimensionFilterGroups": [
    {
      "filters": [
        {
          "dimension": "page",
          "expression": "^sc-domain:example\\.com/.*",
          "operator": "includingRegex",
        },
        {
          "dimension": "page",
          "expression": "#",
          "operator": "excludingRegex",
        },
      ],
    },
  ],
  "endDate": "2024-01-31",
  "rowLimit": 25000,
  "startDate": "2024-01-01",
  "type": "web",
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle different site URL formats correctly 6`] = `
{
  "aggregationType": "byPage",
  "dataState": "all",
  "dimensionFilterGroups": [
    {
      "filters": [
        {
          "dimension": "page",
          "expression": "^sc-domain:www\\.example\\.com/.*",
          "operator": "includingRegex",
        },
        {
          "dimension": "page",
          "expression": "#",
          "operator": "excludingRegex",
        },
      ],
    },
  ],
  "endDate": "2024-01-31",
  "rowLimit": 25000,
  "startDate": "2024-01-01",
  "type": "web",
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle different site URL formats correctly 7`] = `
{
  "aggregationType": "byPage",
  "dataState": "all",
  "dimensionFilterGroups": [
    {
      "filters": [
        {
          "dimension": "page",
          "expression": "^https://example\\.com:8080/.*",
          "operator": "includingRegex",
        },
        {
          "dimension": "page",
          "expression": "#",
          "operator": "excludingRegex",
        },
      ],
    },
  ],
  "endDate": "2024-01-31",
  "rowLimit": 25000,
  "startDate": "2024-01-01",
  "type": "web",
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle different site URL formats correctly 8`] = `
{
  "aggregationType": "byPage",
  "dataState": "all",
  "dimensionFilterGroups": [
    {
      "filters": [
        {
          "dimension": "page",
          "expression": "^https://example\\.com/path/.*",
          "operator": "includingRegex",
        },
        {
          "dimension": "page",
          "expression": "#",
          "operator": "excludingRegex",
        },
      ],
    },
  ],
  "endDate": "2024-01-31",
  "rowLimit": 25000,
  "startDate": "2024-01-01",
  "type": "web",
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle different site URL formats correctly 9`] = `
{
  "aggregationType": "byPage",
  "dataState": "all",
  "dimensionFilterGroups": [
    {
      "filters": [
        {
          "dimension": "page",
          "expression": "^https://example\\.com/path/?query=1/.*",
          "operator": "includingRegex",
        },
        {
          "dimension": "page",
          "expression": "#",
          "operator": "excludingRegex",
        },
      ],
    },
  ],
  "endDate": "2024-01-31",
  "rowLimit": 25000,
  "startDate": "2024-01-01",
  "type": "web",
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle empty search analytics responses across all functions 1`] = `
{
  "analytics": {
    "current": [
      {
        "keywords": [],
      },
    ],
    "metadata": {
      "currentCount": 1,
      "currentKeywordCount": 0,
      "previousCount": 1,
      "previousKeywordCount": 0,
    },
    "previous": [
      {
        "keywords": [],
      },
    ],
  },
  "countries": {
    "current": [],
    "metadata": {
      "currentCount": 0,
      "previousCount": 0,
      "totalKeywords": 0,
    },
    "previous": [],
  },
  "devices": {
    "current": [],
    "metadata": {
      "currentCount": 0,
      "previousCount": 0,
    },
    "previous": [],
  },
}
`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle malformed API responses 1`] = `[]`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle malformed API responses 2`] = `[]`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle malformed API responses 3`] = `[]`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle malformed API responses 4`] = `[]`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle malformed API responses 5`] = `[]`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle malformed API responses 6`] = `[]`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle malformed API responses 7`] = `[]`;

exports[`comprehensive E2E Tests > edge Cases and Error Scenarios > should handle malformed API responses 8`] = `[]`;

exports[`comprehensive E2E Tests > site Permission and Access Control Tests > should handle different permission levels correctly 1`] = `
[
  {
    "permissionLevel": "siteOwner",
    "siteUrl": "https://owner-site.com/",
    "sitemaps": [
      {
        "errors": 0,
        "isPending": false,
        "isSitemapsIndex": true,
        "lastDownloaded": "2024-01-15T11:00:00.000Z",
        "lastSubmitted": "2024-01-15T10:30:00.000Z",
        "path": "https://example.com/sitemap.xml",
        "type": "urlset",
        "warnings": 0,
      },
      {
        "errors": 0,
        "isPending": false,
        "isSitemapsIndex": false,
        "lastDownloaded": "2024-01-15T11:00:00.000Z",
        "lastSubmitted": "2024-01-15T10:30:00.000Z",
        "path": "https://example.com/sitemap-posts.xml",
        "type": "urlset",
        "warnings": 0,
      },
    ],
  },
  {
    "permissionLevel": "siteFullUser",
    "siteUrl": "https://full-site.com/",
    "sitemaps": [],
  },
  {
    "permissionLevel": "siteRestrictedUser",
    "siteUrl": "https://restricted-site.com/",
    "sitemaps": [],
  },
  {
    "permissionLevel": "siteOwner",
    "siteUrl": "https://readonly-site.com/",
    "sitemaps": [
      {
        "errors": 0,
        "isPending": false,
        "isSitemapsIndex": true,
        "lastDownloaded": "2024-01-15T11:00:00.000Z",
        "lastSubmitted": "2024-01-15T10:30:00.000Z",
        "path": "https://example.com/sitemap.xml",
        "type": "urlset",
        "warnings": 0,
      },
      {
        "errors": 0,
        "isPending": false,
        "isSitemapsIndex": false,
        "lastDownloaded": "2024-01-15T11:00:00.000Z",
        "lastSubmitted": "2024-01-15T10:30:00.000Z",
        "path": "https://example.com/sitemap-posts.xml",
        "type": "urlset",
        "warnings": 0,
      },
    ],
  },
]
`;
